# wifi-manager-esp8266

./: CMakeLists.txt  Makefile  README.md  partitions_custom.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/wifi-manager/: CMakeLists.bak  CMakeLists.txt  Kconfig  component.mk
components/wifi-manager/include/: cb_list.h  dns_server.h  flash.h  flashrw.h  http_app.h  http_client.h  http_handlers.h  http_server.h  manager.h  ntp_client.h  ota.h  spiffs.h  storage.h
components/wifi-manager/src/: cb_list.c  dns_server.c  flash.c  flashrw.c  http_app.bak  http_app.c  http_client.c  http_handlers.bak  http_handlers.c  http_server.c  httpd_simple.bak  manager.c  ntp_client.c  ota.c  spiffs.c  storage.c
components/wifi-manager/ui/: code.js  index.html  style.css
components/wifi-manager/vue/: code.js  index.html  style.css
main/: CMakeLists.txt  example_wifi_manager.c
